[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/anima/components/AnimaButton.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/editor/AnimaInitialValue.gd" type="Script" id=3]
[ext_resource path="res://addons/anima/icons/Remove.svg" type="Texture" id=4]
[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 5 )
__meta__ = {
"_original_size": 18
}

[node name="AnimaInitialValue" type="Control"]
margin_bottom = 184.0
rect_min_size = Vector2( 0, 184 )
rect_pivot_offset = Vector2( 0, 32 )
rect_clip_content = true
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.15
Animation/Easing = 27.0
Animation/Name = "fadeIn"
Panel/FillColor = Color( 0.105882, 0.129412, 0.180392, 1 )
ButtonNormal/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
ButtonHovered/UseSameStyleOf = ""
ButtonHovered/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
ButtonPressed/UseSameStyleOf = ""
ButtonPressed/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
ButtonFocused/UseSameStyleOf = ""
ButtonFocused/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
ButtonNormal/Size = Rect2( 0, 0, 100, 100 )
ButtonHovered/Size = Rect2( -1, -1, -1, -1 )
ButtonFocused/Size = Rect2( -1, -1, -1, -1 )
ButtonPressed/Size = Rect2( -1, -1, -1, -1 )
ButtonNormal/Border/Color = Color( 1, 1, 1, 0 )
ButtonHovered/Border/Color = Color( 1, 1, 1, 0 )
ButtonFocused/Border/Color = Color( 1, 1, 1, 0 )
ButtonPressed/Border/Color = Color( 1, 1, 1, 0 )
ButtonNormal/Border/Blend = false
ButtonHovered/Border/Blend = false
ButtonFocused/Border/Blend = false
ButtonPressed/Border/Blend = false
ButtonNormal/Border/Offset = Vector2( 0, 0 )
ButtonHovered/Border/Offset = Vector2( -1, -1 )
ButtonFocused/Border/Offset = Vector2( -1, -1 )
ButtonPressed/Border/Offset = Vector2( -1, -1 )
ButtonNormal/Border/Widh/Left = 0
ButtonHovered/Border/Widh/Left = 0
ButtonFocused/Border/Widh/Left = 0
ButtonPressed/Border/Widh/Left = 0
ButtonNormal/Border/Widh/Top = 0
ButtonHovered/Border/Widh/Top = 0
ButtonFocused/Border/Widh/Top = 0
ButtonPressed/Border/Widh/Top = 0
ButtonNormal/Border/Widh/Right = 0
ButtonHovered/Border/Widh/Right = 0
ButtonFocused/Border/Widh/Right = 0
ButtonPressed/Border/Widh/Right = 0
ButtonNormal/Border/Widh/Bottom = 0
ButtonHovered/Border/Widh/Bottom = 0
ButtonFocused/Border/Widh/Bottom = 0
ButtonPressed/Border/Widh/Bottom = 0
ButtonNormal/Border/Radius/Details = 8
ButtonHovered/Border/Radius/Details = 8
ButtonFocused/Border/Radius/Details = 8
ButtonPressed/Border/Radius/Details = 8
ButtonNormal/Border/Radius/TopLeft = 0
ButtonHovered/Border/Radius/TopLeft = 0
ButtonFocused/Border/Radius/TopLeft = 0
ButtonPressed/Border/Radius/TopLeft = 0
ButtonNormal/Border/Radius/TopRight = 0
ButtonHovered/Border/Radius/TopRight = 0
ButtonFocused/Border/Radius/TopRight = 0
ButtonPressed/Border/Radius/TopRight = 0
ButtonNormal/Border/Radius/BottomRight = 0
ButtonHovered/Border/Radius/BottomRight = 0
ButtonFocused/Border/Radius/BottomRight = 0
ButtonPressed/Border/Radius/BottomRight = 0
ButtonNormal/Border/Radius/BottomLeft = 0
ButtonHovered/Border/Radius/BottomLeft = 0
ButtonFocused/Border/Radius/BottomLeft = 0
ButtonPressed/Border/Radius/BottomLeft = 0
ButtonNormal/Border/Offset/Radius/Details = 8
ButtonHovered/Border/Offset/Radius/Details = 8
ButtonFocused/Border/Offset/Radius/Details = 8
ButtonPressed/Border/Offset/Radius/Details = 8
ButtonNormal/Border/Offset/Radius/TopLeft = -1
ButtonHovered/Border/Offset/Radius/TopLeft = -1
ButtonFocused/Border/Offset/Radius/TopLeft = -1
ButtonPressed/Border/Offset/Radius/TopLeft = -1
ButtonNormal/Border/Offset/Radius/TopRight = -1
ButtonHovered/Border/Offset/Radius/TopRight = -1
ButtonFocused/Border/Offset/Radius/TopRight = -1
ButtonPressed/Border/Offset/Radius/TopRight = -1
ButtonNormal/Border/Offset/Radius/BottomRight = -1
ButtonHovered/Border/Offset/Radius/BottomRight = -1
ButtonFocused/Border/Offset/Radius/BottomRight = -1
ButtonPressed/Border/Offset/Radius/BottomRight = -1
ButtonNormal/Border/Offset/Radius/BottomLeft = -1
ButtonHovered/Border/Offset/Radius/BottomLeft = -1
ButtonFocused/Border/Offset/Radius/BottomLeft = -1
ButtonPressed/Border/Offset/Radius/BottomLeft = -1
ButtonNormal/Shadow/Color = Color( 1, 1, 1, 0 )
ButtonHovered/Shadow/Color = Color( 1, 1, 1, 0 )
ButtonFocused/Shadow/Color = Color( 1, 1, 1, 0 )
ButtonPressed/Shadow/Color = Color( 1, 1, 1, 0 )
ButtonNormal/Shadow/Size = 0
ButtonHovered/Shadow/Size = 0
ButtonFocused/Shadow/Size = 0
ButtonPressed/Shadow/Size = 0
ButtonNormal/Shadow/Offset = Vector2( 0, 0 )
ButtonHovered/Shadow/Offset = Vector2( -1, -1 )
ButtonFocused/Shadow/Offset = Vector2( -1, -1 )
ButtonPressed/Shadow/Offset = Vector2( -1, -1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
rect_pivot_offset = Vector2( 512, 51 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 238.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( -528, -77 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 226.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 12
custom_constants/hseparation = 24
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 101.0
margin_bottom = 25.0
text = "Property:"

[node name="PropertyLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 125.0
margin_right = 226.0
margin_bottom = 25.0
text = "Property:"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 47.0
margin_right = 101.0
margin_bottom = 72.0
text = "Value:"

[node name="PropertyValue" parent="MarginContainer/VBoxContainer/GridContainer" instance=ExtResource( 2 )]
margin_left = 125.0
margin_top = 37.0
margin_right = 226.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 45 )
rect_pivot_offset = Vector2( 50.5, 22.5 )
size_flags_vertical = 1
type = 4
can_clear_custom_value = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 226.0
margin_bottom = 128.0
alignment = 1

[node name="Delete" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 173.0
margin_bottom = 34.0
rect_min_size = Vector2( 120, 34 )
rect_pivot_offset = Vector2( 60, 17 )
hint_tooltip = "Remove the frame"
mouse_default_cursor_shape = 2
script = ExtResource( 1 )
Animation/AnimatePropertyChange = false
Animation/Speed = 0.15
Animation/Easing = 0
Button/Label = ""
Button/Align = 1
Button/VAlign = 1
Button/Font = SubResource( 1 )
Button/ToggleMode = false
Normal/FillColor = Color( 0.47451, 0.211765, 0.196078, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.635294, 0.309804, 0.290196, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = ""
Focused/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 100, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0.01 )
Focused/Border/Color = Color( 1, 1, 1, 0.01 )
Pressed/Border/Color = Color( 1, 1, 1, 0.01 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 8
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 8
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 8
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 8
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 8
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 0, 0, 0, 0.517647 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 1
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 2, 2 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Delete"]
margin_left = 19.0
margin_top = 7.0
margin_right = 72.0
margin_bottom = 27.0
mouse_filter = 2
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Delete/HBoxContainer"]
margin_right = 16.0
margin_bottom = 25.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/Delete/HBoxContainer/CenterContainer"]
margin_top = 4.0
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Remove" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/Delete/HBoxContainer/CenterContainer/Control"]
texture = ExtResource( 4 )
centered = false

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Delete/HBoxContainer"]
margin_left = 24.0
margin_right = 112.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Remove"
align = 1
valign = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
